objects/Ashwin__c.object
<CustomObject>
    <fields>
        <fullName>Ash_Text__c</fullName>
        <label>Ash Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ash_picklist__c</fullName>
        <label>Ash picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leela_text__c</fullName>
        <label>Leela text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vicky_text__c</fullName>
        <label>Vicky text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Ashwin</label>
    <nameField>
        <label>Ashwin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ashwins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>